--- a/src/RobboGui/RobboMenu.css
+++ b/src/RobboGui/RobboMenu.css
@@ -4,10 +4,7 @@
 
 .robbo_menu{
 
-  position: absolute;
-  /*top:4.8%;*/
-  top:48px;
-  left:355px;
+  position: fixed;
 /*  background-color: rgb(90,90,90);*/
   background-color: #00af41;
 
@@ -25,6 +22,7 @@
   font-weight:bold;
 
   font-size: 10px;
+  z-index: 1001;
 
 }
 
